<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:id="@+id/header"
        app:cardElevation="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="19dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        <TextView
            android:textAlignment="center"
            android:layout_marginVertical="19dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/redactor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <ImageButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="19dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save_button"
            android:src="@drawable/baseline_check_24"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/record_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="@string/tittle"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:scrollbars="vertical"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/record_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            tools:ignore="VisualLintTextFieldSize" />

        <Spinner
            android:id="@+id/record_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:text="@string/Deadline" />

        <ImageButton
            android:id="@+id/select_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:background="@color/design_default_color_background"
            android:src="@drawable/filter" />

        <TextView
            android:id="@+id/selected_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="18dp"
            android:text="@string/date_empty" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>