<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="19dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="19dp"
            android:fontFamily="@font/roboto"
            android:text="@string/category_redactor"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="19dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save_button"
            android:src="@drawable/ic_confirm_24"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <EditText
            android:id="@+id/categoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints="@string/category_title_hint"
            android:hint="@string/category_title_hint"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:scrollbars="vertical"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>